--- a/deploy/crds/example.com_travellers_crd.yaml
+++ b/deploy/crds/example.com_travellers_crd.yaml
@@ -30,6 +30,19 @@ spec:
           type: object
         spec:
           description: TravellerSpec defines the desired state of Traveller
+          properties:
+            image:
+              type: string
+            size:
+              description: 'INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
+                Important: Run "operator-sdk generate k8s" to regenerate code after
+                modifying this file Add custom validation using kubebuilder tags:
+                https://book-v1.book.kubebuilder.io/beyond_basics/generating_crd.html'
+              format: int32
+              type: integer
+          required:
+          - image
+          - size
           type: object
         status:
           description: TravellerStatus defines the observed state of Traveller
